--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Revue de presse</title>
-	
+
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
 <body>
@@ -33,9 +33,9 @@
 		<p>
 			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 		</p>
-		
+
 	</div>
-	
+
 	<div id="Thomas">
 		<h2>
 			News !!
@@ -62,7 +62,7 @@
 			News !!
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Genshin impact a subit un boycott de la part de certaine personne sur le réseau sociaux twitter sous le hashtag #boycottGenshin
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
