archive de la nouvelle version

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 	
 	<div id="Thomas">
 		<h2>
-			News !!
+			Groupe de Memphis
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			"Dennis Zanone: Tout est pratique et fonctionnel. Tout marche. Memphis défis la forme sans négliger la fonction. Celà commence par un concept, avec Sottsass qui réunissait de jeunes designer . Dés lors, ça devenait commercial. Ce n'était pas une satire. C'est une façon de penser différente sur la forme et la fonction."
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://www.artnews.com/art-news/news/completely-obsessive-dennis-zanone-on-his-sprawling-collection-of-memphis-design-4406/">ARTnews</a>
 		</h3>
 	</div>
 
