--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			Groupe de Memphis
 		</h2>
 		<p>
-			"Dennis Zanone: Tout est pratique et fonctionnel. Tout marche. Memphis défis la forme sans négliger la fonction. Celà commence par un concept, avec Sottsass qui réunissait de jeunes designer . Dés lors, ça devenait commercial. Ce n'était pas une satire. C'est une façon de penser différente sur la forme et la fonction."
+			"Dennis Zanone : tout est pratique et fonctionnel. Tout marche. Memphis défit la forme sans négliger la fonction. Cela commence par un concept, avec Sottsass qui réunissait de jeunes designers. Dés lors, ça devenait commercial. Ce n'était pas une satire. C'est une façon de penser différente sur la forme et la fonction." <br><br>Cette interview de Dennis Zanone, collectionneur d'œuvres réalisées par le groupe Menphis et datant de l'époque post moderne, a pour qualité de mettre en place les grandes prémisses du Groupe Menphis : changer les regards sur l'ameublement, être certes pratique mais aussi original, amusant, jovial, unique. Ces œuvres, en plus d'arborer ces qualités, ont l'audace de jouer avec des formes simples, mais complexes dans leur association, les palettes de couleurs sont saturées et improbables, tandis que les motifs sont rayés, à poids, et même illustrés. Tout cela dans la pure lignée du pop art et ses principes.
 		</p>
 		<h3>Source : <a href="https://www.artnews.com/art-news/news/completely-obsessive-dennis-zanone-on-his-sprawling-collection-of-memphis-design-4406/">ARTnews</a>
 		</h3>
