--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<div id="Félix" class="news">
 		<h2>
-			News !!
+			La casualisation inutile des jeux FromSoftWare
 		</h2>
 		<p>
 			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
@@ -88,7 +88,7 @@
 		<p>
 			Salut à tous ! Aujourd'hui on va brièvement parler d'un jeu qui nous parviendra le 25 Juin prochain et que les fans de jrpg tel que moi attendent probablement : Scarlet Nexus. Pour ceux à qui ça ne parlerait pas encore, on se met dans le bain avec un <a href="https://www.youtube.com/watch?v=k1kI09X8L9Y"> trailer</a> qui donne envie.
 		</p>
-		
+
 	</div>
 
 	<div id="Gilles" class="news">
