Ajout de mon édito

--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
 		</h3>
 	</div>
 
-<div id="Mélisande " class="news">
+<div id="Mélisande" class="news">
 		<h2>
-			News !!
+			Cette carte est incroyable !
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			La carte Pokemon de Charizard vaut acctullement 506.969$ Incroyable pour une carte qui à + de 20 ans.
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://gaming.gentside.com/pokemon/pokemon-les-10-cartes-les-plus-cheres-de-l-histoire-du-jeu_art24621.html">gentsite</a>
 		</h3>
 	</div>
 
